# inferno

./: 404.html  CONTRIBUTING.html  README.md  formatting-requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: CI-build.yml  docs.yml  linting.yml  pypi-publish.yml  tests.yml
CONTRIBUTING/: index.html
api/: datasets.html  loss_fns.html  models.html
api/bnn/: modules.html  temperature_scaling.html
api/bnn/bnn.params/: parameters.html  parametrizations.html
api/bnn/bnn.params/parameters/: index.html
api/bnn/bnn.params/parametrizations/: index.html
api/bnn/modules/: index.html
api/bnn/temperature_scaling/: index.html
api/datasets/image/: index.html
api/datasets/language/: index.html
api/datasets/tabular/: index.html
api/datasets/text/: index.html
api/datasets/vision/: index.html
api/loss_fns/: index.html
api/models/: index.html
docs/: CONTRIBUTING.md  development_guidelines.md  index.md
docs/api/: distributions.md
docs/api/datasets/: image.md  tabular.md  text.md
docs/examples/ibvi/classification/: run.py
docs/examples/varibo/classification/: run.py
docs/examples/varibo/regression/: regression.md  run.py
examples/ibvi/classification/classification/: index.html
examples/ibvi/regression/regression/: index.html
examples/varibo/classification/: classification.html
examples/varibo/classification/classification/: index.html
examples/varibo/regression/: regression.html
examples/varibo/regression/regression/: index.html
inferno/: __init__.py
inferno/bnn/: __init__.py
inferno/bnn/modules/: __init__.py  attention.py  bnn_mixin.py  conv.py  linear.py  module.py  sin_pos_encoding.py
inferno/bnn/modules/containers/: sequential.py
inferno/bnn/params/covariances/: kronecker.py
inferno/datasets/: __init__.py
inferno/datasets/tabular/: concrete_compressive_strength.py
inferno/distributions/: __init__.py  delta.py
inferno/loss_fns/: __init__.py  focal_loss.py  variance_reduced_loss_fns.py  variance_reduced_losses.py  wrapped_torch_loss_fns.py
inferno/models/: __init__.py  ensemble.py  mlp.py  resnet.py  vision_transformer.py  vit.py
search/: search_index.json
tests/bnn/: test_temperature_scaler.py
tests/bnn/modules/: test_attention.py  test_bnn_mixin.py  test_linear.py  test_sin_pos_encoding.py
tests/bnn/modules/container/: test_sequential.py
tests/bnn/modules/conv/: test_conv1d.py  test_conv2d.py  test_conv3d.py
tests/bnn/params/: test_gaussian_parameter.py
tests/bnn/params/covariances/: test_diagonal.py  test_factorized.py  test_kronecker.py  test_low_rank.py
tests/bnn/params/parametrizations/: test_maximal_update.py  test_neural_tangent.py  test_parametrization.py  test_standard.py
tests/loss_fns/: test_focal_loss.py  test_variance_reduced_loss_fns.py  test_variational_free_energy.py  test_wrapped_torch_loss_fns.py
tests/models/: test_ensemble.py  test_mlp.py  test_resnet.py  test_vision_transformer.py  test_vit.py
